--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -6,5 +6,33 @@
     </head>
     <body>
         <h1>Perfect Basic Burger Recipe</h1>
+        <img src="https://www.allrecipes.com/thmb/5bbowF39Flo1sblOqjMQifuj1a8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/25473-the-perfect-basic-burger-DDMFS-4x3-56eaba3833fd4a26a82755bcd0be0c54.jpg" alt="A delicious perfect burger">
+
+        <h2>The easiest burger to make</h2>
+        <p>A basic burger that anyone can make in no time!</p>
+
+        <p>This recipe uses only 5 ingredients and requires 15 minutes of cooking time.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 large egg</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1/2 teaspoon ground black pepper</li>
+            <li>1 pound ground beef</li>
+            <li>1/2 cup fine dry bread crumbs</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat an outdoor grill for high heat and lightly oil the grate.</li>
+            <li>Whisk together egg, pepper, and salt in a medium bowl.</li>
+            <li>Add ground beef and bread crumbs and mix with your hands or a fork until well blended.</li>
+            <li>Form into 3/4-inch-thick patties.</li>
+            <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
+            <li>Serve hot and enjoy!</li>
+        </ol>
+        <a href="../index.html">Back to main page</a>
+        
+
     </body>
 </html>
