Add image and recipe list

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/burger.html">The Perfect Basic Burger</a>
+        <h1>3 Recipes for Outdoor BBQ's</h1>
+        <img src="https://hips.hearstapps.com/hmg-prod/images/clx060123nestcurrentlycraving-001-64c2b647d4fce.jpg?crop=1xw:0.8890414092884923xh;center,top&resize=980:*" alt="An image of a backyard with grill">
+        
+        
+        <h3>Recipes</h3>
+        <ul>
+            <li><a href="recipes/burger.html">The Perfect Basic Burger</a></li>
+            <li><a href="recipes/deviled-eggs.html">Classic Deviled Eggs</a></li>
+            <li><a href="recipes/tomato-pie.html">Southern Tomato Pie</a></li>
+        </ul>
     </body>
 </html>
